manifests/nextcloud/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mysql
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
