manifests/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mysql
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-mysql
  ports:
  - port: 3306
  type: ClusterIP
